Add big image header with placeholder text and image

--- a/index.html
+++ b/index.html
@@ -10,15 +10,23 @@
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
     </head>
     <body>
-        <nav id="navBar" class="navbar navbar-full navbar-light">
-            <div class="container">
-                <a class="navbar-brand" href="#">Willy Liu</a>
-                <div class="nav navbar-nav float-xs-right">
-                    <a href="#" class="nav-item nav-link">About me</a>
-                    <a href="#" class="nav-item nav-link">Recent projects</a>
+        <header class="intro-header">
+            <nav id="navBar" class="navbar navbar-full navbar-light">
+                <div class="container">
+                    <a class="navbar-brand" href="#">Willy Liu</a>
+                    <div class="nav navbar-nav float-xs-right">
+                        <a href="#" class="nav-item nav-link">About me</a>
+                        <a href="#" class="nav-item nav-link">Recent projects</a>
+                    </div>
+                </div>
+            </nav>
+
+            <div class="container vertical-center">
+                <div class="site-heading">
+                    <h1>I didn't even take this picture</h1>
                 </div>
             </div>
-        </nav>
+        </header>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
