--- a/index.html
+++ b/index.html
@@ -10,21 +10,19 @@
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
     </head>
     <body>
-        <header class="intro-header">
-            <nav id="navBar" class="navbar navbar-full navbar-light">
-                <div class="container">
-                    <a class="navbar-brand" href="#">Willy Liu</a>
-                    <div class="nav navbar-nav float-xs-right">
-                        <a href="#" class="nav-item nav-link">About me</a>
-                        <a href="#" class="nav-item nav-link">Recent projects</a>
-                    </div>
+        <nav id="navBar" class="navbar navbar-fixed-top navbar-light">
+            <div class="container">
+                <a class="navbar-brand" href="#">Willy Liu</a>
+                <div class="nav navbar-nav float-xs-right">
+                    <a href="#" class="nav-item nav-link">About me</a>
+                    <a href="#" class="nav-item nav-link">Recent projects</a>
                 </div>
-            </nav>
-
-            <div class="container vertical-center">
-                <div class="site-heading">
-                    <h1>I didn't even take this picture</h1>
-                </div>
+            </div>
+        </nav>
+        <header class="introHeader">
+            <div class="verticalCenter">
+                <h1>I didn't even take this picture</h1>
+                <a href="#" class="btn btn-lg btn-outline-default">What</a>
             </div>
         </header>
 
