--- a/index.html
+++ b/index.html
@@ -22,10 +22,33 @@
         <header class="introHeader">
             <div class="verticalCenter">
                 <h1>I didn't even take this picture</h1>
-                <a href="#" class="btn btn-lg btn-outline-default">What</a>
+                <a href="https://unsplash.com/?photo=cPHXM61ob_0" class="btn btn-lg btn-outline-default">What</a>
             </div>
         </header>
 
+        <section class="container">
+            <div class="row">
+                <div class="col-md-8 offset-md-2">
+                    <h1>Article?</h1>
+                    <p class="lead">Lead text bro. </p>
+                </div>
+            </div>
+        </section>
+
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <h3>Contact</h3>
+                        <strong>Email:</strong> arkazain@gmail.com
+                    </div>
+                    <div class="col-md-4">
+                    </div>
+                    <div class="col-md-4">
+                    </div>
+                </div>
+            </div>
+        </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
