--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Willy Liu</title>
+        <script src="https://use.fontawesome.com/46180d8fca.js"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
@@ -40,7 +41,22 @@
                 <div class="row">
                     <div class="col-md-4">
                         <h3>Contact</h3>
-                        <strong>Email:</strong> arkazain@gmail.com
+                        <i class="fa fa-envelope-open" aria-hidden="true"></i>
+                        <a href="mailto:arkazain@gmail.com"> arkazain@gmail.com</a> <br>
+
+                        <i class="fa fa-link" aria-hidden="true"></i>
+                        <a href="" onclick="print()"> willwull.github.com</a><br>
+                            <script>
+                            function print() {
+                                alert("Oh hey, you're already here! How silly of me.");
+                            }
+                            </script>
+
+                        <i class="fa fa-github" aria-hidden="true"></i>
+                        <a href="https://github.com/willwull"> My Github profile</a><br>
+
+                        <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+                        <a href="https://www.linkedin.com/in/willy-liu-368844116?"> LinkedIn</a>
                     </div>
                     <div class="col-md-4">
                     </div>
