Update About Me section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="container">
                 <a class="navbar-brand" href="#">Willy Liu</a>
                 <div class="nav navbar-nav float-xs-right">
-                    <a href="#" class="nav-item nav-link">About me</a>
+                    <a href="#aboutMe" class="nav-item nav-link">About me</a>
                     <a href="#" class="nav-item nav-link">Recent projects</a>
                 </div>
             </div>
@@ -23,16 +23,39 @@
         <header class="introHeader">
             <div class="verticalCenter">
                 <h1>I didn't even take this picture</h1>
-                <a href="https://unsplash.com/?photo=cPHXM61ob_0" class="btn btn-lg btn-outline-default">What</a>
+                <a href="https://unsplash.com/?photo=cPHXM61ob_0"
+                class="btn btn-lg btn-outline-default">What</a>
             </div>
         </header>
 
-        <section class="container">
+        <section id="aboutMe" class="container containerPanel">
             <div class="row">
                 <div class="col-md-8 offset-md-2">
-                    <h1>Article?</h1>
-                    <p class="lead">Lead text bro. </p>
+                    <h1>Hey there</h1>
+                    <p>
+                        I'm Willy Liu, a second year student at KTH Royal
+                        Institute of Technology in the Computer Science program.
+                        I'm pretty into design, programming, web development and other
+                        computery stuff.
+                    </p>
+                    <p>
+                        When I started high school, I hadn't ever written a single
+                        line of code. Today, there isn't a single day I'm not in
+                        my text editor of choice hacking away at something.
+                    </p>
                 </div>
+            </div>
+        </section>
+
+        <section id="languages" class="containerPanel">
+            <div class="container">
+            <div class="row">
+                <div class="col-md-8 offset-md-2">
+                    <h1>Languages I have worked with:</h1>
+                    Java, C#, HTML, CSS, Sass, C, C++, Haskell, Prolog,
+                    Golang, PHP, jQuery, SQL
+                </div>
+            </div>
             </div>
         </section>
 
