Add design section

--- a/index.html
+++ b/index.html
@@ -59,6 +59,27 @@
             </div>
         </section>
 
+<section id="design" class="containerPanel">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 offset-md-2">
+                <p>
+                    One of my biggest passions is graphic design, photography
+                    and image editing, which is a hobby I've been into since
+                    the age of 12 or something.
+                </p>
+                <p>
+                    This hobby lead me to become the <em>art director</em> for
+                    the computer science chapter at KTH.<br>
+                    As art director, my job is to shape the graphical profile
+                    for the computer science chapter and its different boards.
+                    I design logos, posters, patches and things like that.
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
+
         <footer>
             <div class="container">
                 <div class="row">
