Move photo to separate panel

--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
     </div>
 </section>
 
+<section id="photoPanel" class="containerPanel"></section>
+
 <footer>
     <div class="container">
         <div class="row">
