Implement Google Fonts, update banner

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Willy Liu</title>
+        <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
         <script src="https://use.fontawesome.com/46180d8fca.js"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
@@ -22,9 +23,7 @@
 </nav>
 <header class="introHeader">
     <div class="verticalCenter">
-        <h1>I didn't even take this picture</h1>
-        <a href="https://unsplash.com/?photo=cPHXM61ob_0"
-        class="btn btn-lg btn-outline-default">What</a>
+        <h1 class="fancyFont">I'm Willy Liu.</h1>
     </div>
 </header>
 
@@ -80,7 +79,22 @@
     </div>
 </section>
 
-<section id="photoPanel" class="containerPanel"></section>
+<section id="photoPanel" class="containerPanel">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 offset-md-2">
+                <p>
+                <h1>I do:</h1>
+                Photo editing, vector graphics, prints, logos
+                </p>
+                <p>
+                <h1>Using:</h1>
+                Photoshop, Illustrator, Lightroom
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
 
 <footer>
     <div class="container">
