Update about me and decrease font size

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <p>
                 When I started high school, I hadn't ever written a single
                 line of code. Today, there isn't a single day I'm not in
-                my text editor of choice hacking away at something.
+                my text editor of choice working at something.
             </p>
         </div>
     </div>
@@ -68,9 +68,8 @@
                     the age of 12 or something.
                 </p>
                 <p>
-                    This hobby lead me to become the <em>art director</em> for
-                    the computer science chapter at KTH.<br>
-                    As art director, my job is to shape the graphical profile
+                    As art director for the Computer Science chapter at KTH,
+                    my job is to shape the graphical profile
                     for the computer science chapter and its different boards.
                     I design logos, posters, patches and things like that.
                 </p>
