Update links in nav bar

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <div class="container">
         <a class="navbar-brand" href="#">Willy Liu</a>
         <div class="nav navbar-nav float-xs-right">
-            <a href="#aboutMe" class="nav-item nav-link">About me</a>
-            <a href="#" class="nav-item nav-link">Recent projects</a>
+            <a href="#" class="nav-item nav-link active">About me</a>
+            <a href="projects.html" class="nav-item nav-link">Recent projects</a>
         </div>
     </div>
 </nav>
