Add uncommited stuff

--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,16 @@
     </div>
 </header>
 
-
+<section id="project-tll" class="containerPanel">
+    <div class="container">
+        <div class="row">
+            <img src="img/tll.jpg" class="col-md-6">
+            <div class="col-md-6">
+                Stuff
+            <div>
+        </div>
+    </div>
+</section>
 
 <footer>
     <div class="container">
