✅ Add skills section

--- a/index.html
+++ b/index.html
@@ -30,6 +30,64 @@
       </div>
     </header>
 
+    <section class="section">
+      <div class="container">
+        <h1>My skills</h1>
+        <div id="skills-row" class="row">
+          <div class="col-md-4 skill-card">
+            <div class="inner-container">
+              <div class="icon"><i class="far fa-code"></i></div>
+              <h2 class="name">Programming</h2>
+              <p>
+                I feel confident working in Java, JavaScript and C#.
+                I've also dabbled in C++, C, Prolog and Haskell.
+              </p>
+            </div>
+          </div>
+          <div class="col-md-4 skill-card">
+            <div class="inner-container">
+              <div class="icon"><i class="far fa-compass"></i></div>
+              <h2 class="name">Web dev</h2>
+              <p>
+                I have years of experience working with HTML, CSS and JavaScript.
+                I'm also pretty good with Bootstrap 4 and ReactJS.
+              </p>
+            </div>
+          </div>
+          <div class="col-md-4 skill-card">
+            <div class="inner-container">
+              <div class="icon"><i class="far fa-paint-brush"></i></div>
+              <h2 class="name">Design</h2>
+              <p>
+                Logos, website mockups, vector graphics, you name it.
+                I'm fluent in Photoshop, Illustrator, Sketch and more.
+              </p>
+            </div>
+          </div>
+          <div class="col-md-4 skill-card">
+            <div class="inner-container">
+              <div class="icon"><i class="far fa-camera-alt"></i></div>
+              <h2 class="name">Photography</h2>
+              <p>
+                With my trusty DSLR, I can perfectly capture any moment...
+                with a little help of Lightroom and Photoshop of course.
+              </p>
+            </div>
+          </div>
+          <div class="col-md-4 skill-card">
+            <div class="inner-container">
+              <div class="icon"><i class="far fa-check-circle"></i></div>
+              <h2 class="name">Learning</h2>
+              <p>
+                I learn pretty fast, so feel free to throw anything in
+                my direction. I enjoy trying new stuff!
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
