🚧 Make caret appear immediately

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h1>
           Hey, I'm Willy Liu.<br>
           I like working on
-          <span id="header-interest">design.</span><span id="header-caret" class="nodisplay">|</span>
+          <span id="header-interest">design.</span><span id="header-caret">|</span>
         </h1>
       </div>
     </header>
