--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <!-- Font Awesome -->
     <script defer src="js/packs/regular.js"></script>
+    <script defer src="js/packs/brands.js"></script>
     <script defer src="js/fontawesome.js"></script>
 
     <!-- Bootstrap -->
@@ -37,7 +38,7 @@
           <div class="col-md-4 skill-card">
             <div class="inner-container">
               <div class="icon"><i class="far fa-code"></i></div>
-              <h2 class="name">Programming</h2>
+              <h1 class="name">Programming</h1>
               <p>
                 I feel confident working in Java, JavaScript and C#.
                 I've also dabbled in C++, C, Prolog and Haskell.
@@ -47,7 +48,7 @@
           <div class="col-md-4 skill-card">
             <div class="inner-container">
               <div class="icon"><i class="far fa-compass"></i></div>
-              <h2 class="name">Web dev</h2>
+              <h1 class="name">Web dev</h1>
               <p>
                 I have years of experience working with HTML, CSS and JavaScript.
                 I'm also pretty good with Bootstrap 4 and ReactJS.
@@ -57,7 +58,7 @@
           <div class="col-md-4 skill-card">
             <div class="inner-container">
               <div class="icon"><i class="far fa-paint-brush"></i></div>
-              <h2 class="name">Design</h2>
+              <h1 class="name">Design</h1>
               <p>
                 Logos, website mockups, vector graphics, you name it.
                 I'm fluent in Photoshop, Illustrator, Sketch and more.
@@ -67,7 +68,7 @@
           <div class="col-md-4 skill-card">
             <div class="inner-container">
               <div class="icon"><i class="far fa-camera-alt"></i></div>
-              <h2 class="name">Photography</h2>
+              <h1 class="name">Photography</h1>
               <p>
                 With my trusty DSLR, I can perfectly capture any moment...
                 with a little help of Lightroom and Photoshop of course.
@@ -77,7 +78,7 @@
           <div class="col-md-4 skill-card">
             <div class="inner-container">
               <div class="icon"><i class="far fa-check-circle"></i></div>
-              <h2 class="name">Learning</h2>
+              <h1 class="name">Learning</h1>
               <p>
                 I learn pretty fast, so feel free to throw anything in
                 my direction. I enjoy trying new stuff!
@@ -87,6 +88,40 @@
         </div>
       </div>
     </section>
+
+    <section class="cherry-blossom"></section>
+
+    <footer>
+      <div class="container">
+        <h1>Some links</h1>
+        <div class="footer-links row">
+          <div class="col-md-3 footer-link">
+            <div class="icon">
+              <i class="far fa-envelope-open"></i>
+            </div>
+            <a href="mailto:arkazain@gmail.com">arkazain@gmail.com</a>
+          </div>
+          <div class="col-md-3 footer-link">
+            <div class="icon">
+              <i class="far fa-link"></i>
+            </div>
+            <a href="https://willwull.github.io">willwull.github.io</a>
+          </div>
+          <div class="col-md-3 footer-link">
+            <div class="icon">
+              <i class="fab fa-github"></i>
+            </div>
+            <a href="https://github.com/willwull">My Github</a>
+          </div>
+          <div class="col-md-3 footer-link">
+            <div class="icon">
+              <i class="fab fa-linkedin"></i>
+            </div>
+            <a href="https://www.linkedin.com/in/willy-liu-368844116/">LinkedIn</a>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
