🐛 Fix header animation bug Previously had two timers, which could go out of sync and start printing nonsense

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h1>
           Hey, I'm Willy Liu.<br>
           I like working on
-          <span id="header-interest">design.</span><span id="header-caret">|</span>
+          <span id="header-interest"></span><span id="header-caret" class="caret-anim">|</span>
         </h1>
       </div>
     </header>
