--- a/index.html
+++ b/index.html
@@ -6,6 +6,25 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Willy Liu</title>
 
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="img/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="img/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="img/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="img/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="img/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="img/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="img/favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="img/favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+
     <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
 
@@ -104,15 +123,15 @@
           </div>
           <div class="col-md-3 footer-link">
             <div class="icon">
-              <i class="far fa-link"></i>
-            </div>
-            <a href="https://willwull.github.io">willwull.github.io</a>
-          </div>
-          <div class="col-md-3 footer-link">
-            <div class="icon">
               <i class="fab fa-github"></i>
             </div>
             <a href="https://github.com/willwull">My Github</a>
+          </div>
+          <div class="col-md-3 footer-link">
+            <div class="icon">
+              <i class="fab fa-instagram"></i>
+            </div>
+            <a href="https://www.instagram.com/willyjliu/">@willyjliu</a>
           </div>
           <div class="col-md-3 footer-link">
             <div class="icon">
