--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
     <script defer src="js/packs/brands.js"></script>
     <script defer src="js/fontawesome.js"></script>
 
+    <script src="js/cssua.min.js"></script>
+
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
 
@@ -40,7 +42,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
   </head>
   <body>
-    <header id="main-header">
+    <header id="main-header" class="img-section">
       <div class="container">
         <h1>
           Hey, I'm Willy Liu.<br>
@@ -109,7 +111,7 @@
       </div>
     </section>
 
-    <section class="cherry-blossom"></section>
+    <section class="cherry-blossom img-section"></section>
 
     <footer>
       <div class="container">
