🚧 Change header texts

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <div class="container">
         <h1>
           Hey, I'm Willy Liu.<br>
-          I like working on
+          I like
           <span id="header-interest"></span><span id="header-caret" class="caret-anim">|</span>
         </h1>
       </div>
