🚧 Started projects section and minor changes

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
     <!-- Font Awesome -->
     <script defer src="js/packs/regular.js"></script>
+    <script defer src="js/packs/solid.js"></script>
     <script defer src="js/packs/brands.js"></script>
     <script defer src="js/fontawesome.js"></script>
 
@@ -59,7 +60,7 @@
           <div class="col-md-4 skill-card">
             <div class="inner-container">
               <div class="icon"><i class="far fa-code"></i></div>
-              <h1 class="name">Programming</h1>
+              <h2 class="name">Programming</h2>
               <p>
                 I feel confident working in Java, JavaScript and C#.
                 I've also dabbled in C++, C, Prolog and Haskell.
@@ -69,7 +70,7 @@
           <div class="col-md-4 skill-card">
             <div class="inner-container">
               <div class="icon"><i class="far fa-compass"></i></div>
-              <h1 class="name">Web dev</h1>
+              <h2 class="name">Web dev</h2>
               <p>
                 I have years of experience working with HTML, CSS and JavaScript.
                 I'm also pretty good with Bootstrap 4 and ReactJS.
@@ -79,7 +80,7 @@
           <div class="col-md-4 skill-card">
             <div class="inner-container">
               <div class="icon"><i class="far fa-paint-brush"></i></div>
-              <h1 class="name">Design</h1>
+              <h2 class="name">Design</h2>
               <p>
                 Logos, website mockups, vector graphics, you name it.
                 I'm fluent in Photoshop, Illustrator, Sketch and more.
@@ -89,7 +90,7 @@
           <div class="col-md-4 skill-card">
             <div class="inner-container">
               <div class="icon"><i class="far fa-camera-alt"></i></div>
-              <h1 class="name">Photography</h1>
+              <h2 class="name">Photography</h2>
               <p>
                 With my trusty DSLR, I can perfectly capture any moment...
                 with a little help of Lightroom and Photoshop of course.
@@ -99,7 +100,7 @@
           <div class="col-md-4 skill-card">
             <div class="inner-container">
               <div class="icon"><i class="far fa-check-circle"></i></div>
-              <h1 class="name">Learning</h1>
+              <h2 class="name">Learning</h2>
               <p>
                 I learn pretty fast, so feel free to throw anything in
                 my direction. I enjoy trying new stuff!
@@ -108,6 +109,31 @@
           </div>
         </div>
         <h2>...more info coming soon!</h2>
+      </div>
+    </section>
+
+    <section class="watermelons img-section"></section>
+
+    <section id="coding-projects" class="section">
+      <div class="container">
+        <h1>Coding projects</h1>
+        <div class="row">
+          <div class="col-md-3 icon-container">
+            <div class="icon"><i class="fa fa-comments"></i></div>
+          </div>
+          <div class="col">
+            <h2>Video call/chat widget</h2>
+            <h3>Role: front end design/development</h3>
+            <h3>Technologies used: HTML, CSS, JS (React, WebRTC)</h3>
+            <p>
+              For my summer internship at Ericsson, I was tasked with
+              creating an embeddable JavaScript widget that enables
+              video calling and text chatting through WebRTC.
+              I was responsible for the design and development using React.
+              Used internally, so I can’t show anything.
+            </p>
+          </div>
+        </div>
       </div>
     </section>
 
