🌈 Improve projects section on mobile

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           <div class="col-md-3 icon-container">
             <div class="icon"><i class="fa fa-comments"></i></div>
           </div>
-          <div class="col">
+          <div class="col-md-9 text">
             <h2>Video call/chat widget</h2>
             <h3>Role: front end design/development</h3>
             <h3>Technologies used: HTML, CSS, JS (React, WebRTC)</h3>
