🚧 Add Abios project

--- a/index.html
+++ b/index.html
@@ -123,17 +123,43 @@
           </div>
           <div class="col-md-9 text">
             <h2>Video call/chat widget</h2>
-            <h3>Role: front end design/development</h3>
-            <h3>Technologies used: HTML, CSS, JS (React, WebRTC)</h3>
+            <h3><b>Ericsson</b>, June 2017 - ongoing</h3>
+            <h3><b>Role:</b> front end design/development</h3>
+            <h3><b>Technologies:</b> HTML, CSS, JS (React, WebRTC)</h3>
             <p>
               For my summer internship at Ericsson, I was tasked with
               creating an embeddable JavaScript widget that enables
               video calling and text chatting through WebRTC.
               I was responsible for the design and development using React.
-              Used internally, so I can’t show anything.
+              I used their existing JavaScript library for calling/chatting
+              functionality and made the widget front end completely from scratch,
+              along with a website where users can generate a code snippet to
+              copy and insert into their own website.
             </p>
           </div>
         </div>
+        <div class="line"></div>
+
+        <div class="row">
+          <div class="col-md-3 icon-container">
+            <div class="icon"><i class="fa fa-chart-line"></i></div>
+          </div>
+          <div class="col-md-9 text">
+            <h2>Internal Services Monitoring GUI</h2>
+            <h3><b>Abios Gaming</b>, December 2016 - May 2017</h3>
+            <h3><b>Role:</b> lead designer/front end</h3>
+            <h3><b>Technologies:</b> HTML, CSS, JS (React)</h3>
+            <p>
+              For the course "Software Engingeering (DD1393)" at KTH, my friends
+              and I had the opportunity to work with Abios Gaming to develop a
+              monitoring interface that showed stats and graphs of how well
+              their services performed. This interface was to be integrated into
+              their admin panel on their website.
+            </p>
+          </div>
+        </div>
+        <div class="line"></div>
+        
       </div>
     </section>
 
