🚧 Add The Longest Night project

--- a/index.html
+++ b/index.html
@@ -159,7 +159,26 @@
           </div>
         </div>
         <div class="line"></div>
-        
+
+        <div class="row">
+          <div class="col-md-3 icon-container">
+            <div class="icon"><i class="fa fa-gamepad"></i></div>
+          </div>
+          <div class="col-md-9 text">
+            <h2>The Longest Night</h2>
+            <h3><b>School</b>, Fall 2014 - Spring 2015</h3>
+            <h3><b>Role:</b> writer, art director, developer</h3>
+            <h3><b>Technologies:</b> C#, Unity</h3>
+            <p>
+              As our final project in high school, my friend and I developed a
+              2D puzzle-platformer using Unity. I made all art assets from scratch
+              and wrote the story. My friend did the heavy lifting on the
+              programming side though.<br>
+              <a href="http://telit.se/thelongestnight/">Website</a>.
+              <a href="https://www.youtube.com/watch?v=enQO6nrst_E">Trailer</a>.
+            </p>
+          </div>
+        </div>
       </div>
     </section>
 
