--- a/index.html
+++ b/index.html
@@ -142,6 +142,28 @@
 
         <div class="row">
           <div class="col-md-3 icon-container">
+            <div class="icon"><i class="fa fa-user"></i></div>
+          </div>
+          <div class="col-md-9 text">
+            <h2>Jessie Langhard Personal Website</h2>
+            <h3><b>"Freelance"</b>, June 2017 - ongoing</h3>
+            <h3><b>Role:</b> front end</h3>
+            <h3><b>Technologies:</b> HTML, CSS</h3>
+            <p>
+              I wrote "freelance" in quotes since I'm developing this website
+              for my sister completely for free since I'm such a cool guy.
+              You might notice the design language is similar to this page, but
+              I swear I can do more types of websites, this is just what I like!
+            </p>
+            <a href="http://www.jessielanghard.com">
+              <i class="fa fa-link"></i> Website
+            </a>
+          </div>
+        </div>
+        <div class="line"></div>
+
+        <div class="row">
+          <div class="col-md-3 icon-container">
             <div class="icon"><i class="fa fa-chart-line"></i></div>
           </div>
           <div class="col-md-9 text">
@@ -174,9 +196,13 @@
               2D puzzle-platformer using Unity. I made all art assets from scratch
               and wrote the story. My friend did the heavy lifting on the
               programming side though.<br>
-              <a href="http://telit.se/thelongestnight/">Website</a>.
-              <a href="https://www.youtube.com/watch?v=enQO6nrst_E">Trailer</a>.
             </p>
+            <a href="http://telit.se/thelongestnight/">
+              <i class="fa fa-link"></i> Website
+            </a><br>
+            <a href="https://www.youtube.com/watch?v=enQO6nrst_E">
+              <i class="fa fa-play"></i> Trailer
+            </a>
           </div>
         </div>
       </div>
