👣 Update email in footer

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             <div class="icon">
               <i class="far fa-envelope-open"></i>
             </div>
-            <a href="mailto:arkazain@gmail.com">arkazain@gmail.com</a>
+            <a href="mailto:arkazain@gmail.com">willyjliu@gmail.com</a>
           </div>
           <div class="col-md-3 footer-link">
             <div class="icon">
