--- a/index.html
+++ b/index.html
@@ -29,11 +29,9 @@
     <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
 
     <!-- Font Awesome -->
-    <script defer src="js/packs/regular.js"></script>
-    <script defer src="js/packs/solid.js"></script>
-    <script defer src="js/packs/brands.js"></script>
-    <script defer src="js/fontawesome.js"></script>
+    <script defer src="js/fontawesome-all.min.js"></script>
 
+    <!-- User Agents -->
     <script src="js/cssua.min.js"></script>
 
     <!-- Bootstrap -->
@@ -217,10 +215,6 @@
         </div>
       </div>
     </footer>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
 
     <script src="js/index.js"></script>
   </body>
