--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
           </div>
         </div>
       </div>
+      <a href="gradient-picker/index.html">bruh</a>
     </footer>
 
     <script src="js/index.js"></script>
