🚧 Update link to TLL website

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
     <section id="coding-projects" class="section">
       <div class="container">
-        <h1>Coding projects</h1>
+        <h1>Projects</h1>
         <div class="row">
           <div class="col-md-3 icon-container">
             <div class="icon"><i class="fa fa-comments"></i></div>
@@ -172,7 +172,7 @@
               and wrote the story. I was also worked on level design and
               some gameplay mechanics.
             </p>
-            <a href="http://telit.se/thelongestnight/">
+            <a href="https://willyjliu.com/thelongestnight/">
               <i class="fa fa-link"></i> Website
             </a>&nbsp;
             <a href="https://www.youtube.com/watch?v=enQO6nrst_E">
