--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
               <h2 class="name">Web dev</h2>
               <p>
                 I have years of experience working with HTML, CSS and JavaScript.
-                I'm also pretty good with Bootstrap 4 and ReactJS.
+                I'm also pretty good with React, NodeJS, npm, Webpack, PHP...
+                Why are there so many web technologies?!
               </p>
             </div>
           </div>
@@ -82,6 +83,8 @@
               <p>
                 Logos, website mockups, vector graphics, you name it.
                 I'm fluent in Photoshop, Illustrator, Sketch and more.
+                Check me out on
+                <a href="https://dribbble.com/willwull">dribbble</a>!
               </p>
             </div>
           </div>
