--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
               As our final project in high school, my friend and I developed a
               2D puzzle-platformer using Unity. I made all art assets from scratch
               and wrote the story. I was also worked on level design and
-              some gameplay mechanics.
+              gameplay mechanics.
             </p>
             <a href="https://willyjliu.com/thelongestnight/">
               <i class="fa fa-link"></i> Website
